@@ -16,11 +16,6 @@ java {
 }
 
 dependencies {
-    implementation project(":common:utils")
-    implementation project(":common:exception")
-    implementation project(":common:annotation")
-    implementation project(":common:environment")
-    implementation project(":common:analyzer")
     implementation "com.fasterxml.jackson.core:jackson-databind"
     implementation "com.google.apis:google-api-services-gmail:${libs.versions.gmailApi.get()}"
     implementation 'jakarta.persistence:jakarta.persistence-api'
@@ -37,6 +32,8 @@ dependencies {
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
     compileOnly 'org.springframework.boot:spring-boot-autoconfigure'
     compileOnly 'org.springframework.security:spring-security-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation "org.apache.lucene:lucene-core:${libs.versions.lunceneVersion.get()}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -85,8 +82,4 @@ bootJar {
 
 jar {
     enabled = true
-}
-
-compileJava {
-    options.compilerArgs += "--enable-preview"
 }
